--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!DOCTYPE html><html><head><title>Pawned By Perdika - Team Intriga Reborn</title><meta charset="UTF-8"/><meta name="author" content="Perdika"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="description" content="Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat"/><meta property="og:title" content="Pawned By Perdika - Team Intriga Reborn"/><meta name="keywords" content="Perdika - Team Intriga Reborn,Pawned By Perdika,hacked by Perdika,haxor uploader, haxor script deface generator, nathan prinsley, mr.prins, prinsh, hacked by, haxor my id"/><meta property="og:image" content="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg"/><meta property="og:type" content="website"/> <meta property="og:site_name" content="Haxor Uploader"/><link rel="shortcut icon" type="image/x-icon" href="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" /><link rel="stylesheet" type="text/css" href="https://cdn.prinsh.com/NathanPrinsley-textstyle/nprinsh-stext.css"/><style>body{background: #222222;font-family:Lucida Console;margin-top:35px;}h1,h2{margin-top:.3em;margin-bottom:.3em;}h1.nprinsleyy{color:#dbd9d9;}h2{color:#dbd9d9;}p.message_prinsley{color:#dbd9d9;margin-top:.25em;margin-bottom:.25em;font-size:16px;font-weight:unset;}.hubungi_prinsh{color:#00eb00;text-decoration:none;}.hubungi_prinsh:hover{color:red}.othermes_nprinsh{color:#dbd9d9;font-size:16px;}marquee.foonathanPrinsley{display:;position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; left: 0px; border-top: 2px solid darkred; padding: 5px; background-color: #000}</style></head><body><center/><img src="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" style="width: 20%"><h1 class="nprinsleyy nprinsley-text-glitchan" style="font-size:32px;">Pawned By Perdika</h1><h2 style="font-size:24px;" class="nprinsley-text-rainbowan">Team Intriga Reborn</h2><p class="message_prinsley nathan-prinsley_none">Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat</p><hr/><p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:miroslavzdravkovski59@gmail.com">miroslavzdravkovski59@gmail.com</a></p><p class="othermes_nprinsh nathan-prinsley_none">Contact me if you need brand new OTAX method...</p><audio src="https://cdn.prinsh.com/data-1/mp3/"  autoplay="1" loop="1"></audio><marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nprinsley-detaxt">Greetz to :: Ken Pira, Femor, George Campbell, yop.1, CeleRatDev</b></marquee></center><script src="https://cdn.prinsh.com/NathanPrinsley-effect/blue-fireworks.js" type="text/javascript"></script></body></html>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Pawned By Perdika - Team Intriga Reborn</title>
+      <meta charset="UTF-8"/>
+      <meta name="author" content="Perdika"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta name="description" content="Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat"/>
+      <meta property="og:title" content="Pawned By Perdika - Team Intriga Reborn"/>
+      <meta name="keywords" content="Perdika - Team Intriga Reborn,Pawned By Perdika,hacked by Perdika,haxor uploader, haxor script deface generator, nathan prinsley, mr.prins, prinsh, hacked by, haxor my id"/>
+      <meta property="og:image" content="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg"/>
+      <meta property="og:type" content="website"/>
+      <meta property="og:site_name" content="Haxor Uploader"/>
+      <link rel="shortcut icon" type="image/x-icon" href="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" />
+      <link rel="stylesheet" type="text/css" href="https://cdn.prinsh.com/NathanPrinsley-textstyle/nprinsh-stext.css"/>
+      <style>body{background: #222222;font-family:Lucida Console;margin-top:35px;}h1,h2{margin-top:.3em;margin-bottom:.3em;}h1.nprinsleyy{color:#dbd9d9;}h2{color:#dbd9d9;}p.message_prinsley{color:#dbd9d9;margin-top:.25em;margin-bottom:.25em;font-size:16px;font-weight:unset;}.hubungi_prinsh{color:#00eb00;text-decoration:none;}.hubungi_prinsh:hover{color:red}.othermes_nprinsh{color:#dbd9d9;font-size:16px;}marquee.foonathanPrinsley{display:;position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; left: 0px; border-top: 2px solid darkred; padding: 5px; background-color: #000}</style>
+   </head>
+   <body>
+      <center/>
+         <img src="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" style="width: 20%">
+         <h1 class="nprinsleyy nprinsley-text-glitchan" style="font-size:32px;">Pawned By Perdika</h1>
+         <h2 style="font-size:24px;" class="nprinsley-text-rainbowan">Team Intriga Reborn</h2>
+         <p class="message_prinsley nathan-prinsley_none">Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat</p>
+         <hr/>
+         <p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:miroslavzdravkovski59@gmail.com">miroslavzdravkovski59@gmail.com</a></p>
+         <p class="othermes_nprinsh nathan-prinsley_none">Contact me if you need brand new OTAX method...</p>
+         <br>
+         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none"> If you are using an asynchronous library like discord.py, FOR THE LOVE OF EVERYTHING THAT HAS EVER EXISTED, PLEASE USE THE asyncio.sleep FUNCTION!!!! Not doing so can cause really nasty results</p>
+         <audio src="https://cdn.prinsh.com/data-1/mp3/"  autoplay="1" loop="1"></audio>
+         <marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nprinsley-detaxt">Greetz to :: Ken Pira, Femor, George Campbell, yop.1, CeleRatDev</b></marquee>
+      </center>
+      <script src="https://cdn.prinsh.com/NathanPrinsley-effect/blue-fireworks.js" type="text/javascript"></script>
+   </body>
+</html>
