--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="author" content="Perdika"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <meta name="description" content="Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat"/>
-      <meta property="og:title" content="Pawned By Perdika - Team Intriga Reborn"/>
+      <meta property="og:title" content="Pawned By Perdika RCE - Team Intriga Reborn"/>
       <meta name="keywords" content="Perdika - Team Intriga Reborn,Pawned By Perdika,hacked by Perdika,haxor uploader, haxor script deface generator, nathan prinsley, mr.prins, prinsh, hacked by, haxor my id"/>
       <meta property="og:image" content="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg"/>
       <meta property="og:type" content="website"/>
@@ -18,14 +18,14 @@
    <body>
       <center/>
          <img src="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" style="width: 20%">
-         <h1 class="nprinsleyy nprinsley-text-glitchan" style="font-size:32px;">Pawned By Perdika</h1>
+         <h1 class="nprinsleyy nprinsley-text-glitchan" style="font-size:32px;">Pawned By Perdika RCE</h1>
          <h2 style="font-size:24px;" class="nprinsley-text-rainbowan">Team Intriga Reborn</h2>
          <p class="message_prinsley nathan-prinsley_none">Sorry for hack your website... Hack executed using 1khz Waves and NVME Microcode rat</p>
          <hr/>
          <p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:miroslavzdravkovski59@gmail.com">miroslavzdravkovski59@gmail.com</a></p>
          <p class="othermes_nprinsh nathan-prinsley_none">Contact me if you need brand new OTAX method...</p>
          <br>
-         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none"><a target="_blank" rel="noopener noreferrer" class="othermes_nprinsh nprinsley-text-rainbowan" href="https://doxbin.org/upload/PerdikaMikoZdravkovskiNaumElyosZeta1337Moses">Niggas</a> will pray on your downfall for fun.</p>
+         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none">Somalia is a country that combined the idea of niggers and pirates into one, be like Somalia and merge your ideas niggas.</p>
          <audio src="https://cdn.prinsh.com/data-1/mp3/"  autoplay="1" loop="1"></audio>
          <marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nprinsley-detaxt">Greetz to :: Ken Pira, Femor, George Campbell, yop.1, CeleRatDev</b></marquee>
       </center>
