--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:miroslavzdravkovski59@gmail.com">miroslavzdravkovski59@gmail.com</a></p>
          <p class="othermes_nprinsh nathan-prinsley_none">Contact me if you need brand new OTAX method...</p>
          <br>
-         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none">Somalia is a country that combined the idea of niggers and pirates into one, be like Somalia and merge your ideas niggas.</p>
+         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none">Perdika RCE is the best RCE to ever exist.</p>
          <audio src="https://cdn.prinsh.com/data-1/mp3/"  autoplay="1" loop="1"></audio>
          <marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nprinsley-detaxt">Greetz to :: Ken Pira, Femor, George Campbell, yop.1, CeleRatDev</b></marquee>
       </center>
