--- a/index.html
+++ b/index.html
@@ -13,32 +13,22 @@
       <meta property="og:site_name" content="Haxor Uploader"/>
       <link rel="shortcut icon" type="image/x-icon" href="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" />
       <link rel="stylesheet" type="text/css" href="https://cdn.prinsh.com/NathanPrinsley-textstyle/nprinsh-stext.css"/>
-      <style>body{background: #222222;font-family:Lucida Console;margin-top:35px;}h1,h2{margin-top:.3em;margin-bottom:.3em;}h1.nprinsleyy{color:#dbd9d9;}h2{color:#dbd9d9;}p.message_prinsley{color:#dbd9d9;margin-top:.25em;margin-bottom:.25em;font-size:16px;font-weight:unset;}.hubungi_prinsh{color:#00eb00;text-decoration:none;}.hubungi_prinsh:hover{color:red}.othermes_nprinsh{color:#dbd9d9;font-size:16px;}marquee.foonathanPrinsley{display:;position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; left: 0px; border-top: 2px solid darkred; padding: 5px; background-color: #000}</style>
-      <style>.bg-video {
-  position: fixed;
-  left: 0;
-  top: 0;
-  background-size: cover;
-  background: no-repeat center;
-  margin-left: 50vw;
-  user-select: none;
-  pointer-events: none;
-
-  /*additional tweaks for positioning, read more in the link above*/
-  height: 100%;
-  width: 177.77777778vh; /* 100 * 16 / 9 */
-  min-width: 100%;
-  min-height: 56.25vw; /* 100 * 9 / 16 */
-}</style>
+      <style>body{font-family:Lucida Console;margin-top:35px;}h1,h2{margin-top:.3em;margin-bottom:.3em;}h1.nprinsleyy{color:#dbd9d9;}h2{color:#dbd9d9;}p.message_prinsley{color:#dbd9d9;margin-top:.25em;margin-bottom:.25em;font-size:16px;font-weight:unset;}.hubungi_prinsh{color:#00eb00;text-decoration:none;}.hubungi_prinsh:hover{color:red}.othermes_nprinsh{color:#dbd9d9;font-size:16px;}marquee.foonathanPrinsley{display:;position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; left: 0px; border-top: 2px solid darkred; padding: 5px; background-color: #000}</style>
    </head>
    <body>
-      <iframe 
-  class="bg-video"
-  src="https://www.youtube.com/embed/0YaO0ZC-B-8?autoplay=1&mute=0&controls=0&loop=1"
-  frameBorder="0"
-  allowFullScreen
-  allow="autoplay"
-/>
+      <video autoplay muted loop id="video">
+          <source src="/video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      <style>
+          #video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+        }
+      </style>
       <center/>
          <img src="https://cdn.prinsh.com/data-1/images/NathanPrinsley-hacker-keyboard.jpeg" style="width: 20%">
          <h1 class="nprinsleyy nprinsley-text-glitchan" style="font-size:32px;">Pawned By Perdika RCE</h1>
@@ -48,7 +38,7 @@
          <p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:miroslavzdravkovski59@gmail.com">miroslavzdravkovski59@gmail.com</a></p>
          <p class="othermes_nprinsh nathan-prinsley_none">Contact me if you need brand new OTAX method...</p>
          <br>
-         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none">Life has a lot to offer.</p>
+         <p class="othermes_nprinsh nprinsley-text-rainbowan">DAILY WISDOM: </p><p class="othermes_nprinsh nathan-prinsley_none">I am always... Two steps ahead.</p>
          <audio src="https://cdn.prinsh.com/data-1/mp3/"  autoplay="1" loop="1"></audio>
          <marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nprinsley-detaxt">Greetz to :: Ken Pira, Femor, George Campbell, yop.1, CeleRatDev</b></marquee>
       </center>
