--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <style>body{font-family:Lucida Console;margin-top:35px;}h1,h2{margin-top:.3em;margin-bottom:.3em;}h1.nprinsleyy{color:#dbd9d9;}h2{color:#dbd9d9;}p.message_prinsley{color:#dbd9d9;margin-top:.25em;margin-bottom:.25em;font-size:16px;font-weight:unset;}.hubungi_prinsh{color:#00eb00;text-decoration:none;}.hubungi_prinsh:hover{color:red}.othermes_nprinsh{color:#dbd9d9;font-size:16px;}marquee.foonathanPrinsley{display:;position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; left: 0px; border-top: 2px solid darkred; padding: 5px; background-color: #000}</style>
    </head>
    <body>
-      <video autoplay muted loop id="video">
-          <source src="/video.mp4" type="video/mp4">
+      <video autoplay loop id="video">
+          <source src="https://files.catbox.moe/gva14r.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
       <style>
