--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<head>
+</head>
+<body>
+    <h1>True Admin Domain #1</h1>
+    Set up and administrated by @xpnnuf04rito54x
+    Thanks to @gandhiss for donating this domain.
+</body>
