--- a/index.html
+++ b/index.html
@@ -2,7 +2,121 @@
 <head>
 </head>
 <body>
-    <h1>True Admin Domain #1</h1>
-    Set up and administrated by @xpnnuf04rito54x
-    Thanks to @gandhiss for donating this domain.
-</body>
+<h1>The Z gallery</h1>
+<h2>Here you can observe the pictures</h2>
+<h2><a href="/gc.html">Press me to observe the group chat</a></h2>
+<div class="gallery">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/241097596_10208746937826575_6346091029774779297_n.PNG" alt="Image 1">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0993.JPEG" alt="Image 2">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1027.JPEG" alt="Image 3">
+  <video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/311713346_945889659702109_2576503625697634200_n.MP4" controls=""></video>
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0994.JPEG" alt="Image 4">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1028.JPEG" alt="Image 5">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/47680317_10205144907138059_2667081120658489344_n.PNG" alt="Image 6">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0995.JPEG" alt="Image 7">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1030.JPEG" alt="Image 8">
+  <video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/A363E2A0-3E2C-4D02-92D6-2302244D08F1.MP4" controls=""></video>
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0996.JPEG" alt="Image 9">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1031.JPEG" alt="Image 10">
+  <video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/F0DEE91A-7A32-445C-AC67-6B75C8608441.MP4" controls=""></video>
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0997.JPEG" alt="Image 11">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1032.JPEG" alt="Image 12">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0998.JPEG" alt="Image 13">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1034.JPEG" alt="Image 14">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0782.JPEG" alt="Image 15">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0999.JPEG" alt="Image 16">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1035.JPEG" alt="Image 17">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0784.JPEG" alt="Image 18">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1001.JPEG" alt="Image 19">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1036.JPEG" alt="Image 20">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0785.JPEG" alt="Image 21">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1002.JPEG" alt="Image 22">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1038.JPEG" alt="Image 23">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0793.PNG" alt="Image 24">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1017.JPEG" alt="Image 25">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1039.JPEG" alt="Image 26">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0796.PNG" alt="Image 27">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1020.JPEG" alt="Image 28">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1040.JPEG" alt="Image 29">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0826.PNG" alt="Image 30">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1022.JPEG" alt="Image 31">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1041.JPEG" alt="Image 32">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0990.JPEG" alt="Image 33">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1023.JPEG" alt="Image 34">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1042.JPEG" alt="Image 35">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0991.JPEG" alt="Image 36">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1024.JPEG" alt="Image 37">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1043.JPEG" alt="Image 38">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0992.JPEG" alt="Image 39">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1025.JPEG" alt="Image 40">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0993 (1).JPEG" alt="Image 41">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_1026.JPEG" alt="Image 42">
+  <video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/edits/naum_forgis.mp4" controls=""></video>
+  <video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/edits/oigg9n.mp4" controls=""></video>
+
+  <!-- New files added -->
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/105921360_10207271184853673_6415760258705347098_n.PNG" alt="Image 43">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/106100876_10207271189493789_5606577542402976386_n.PNG" alt="Image 44">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/11699067_1444259445898424_3220565930997280194_o.PNG" alt="Image 45">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/134020405_10207945883000705_2885635412133329909_n.PNG" alt="Image 46">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/136055147_2854700684854286_430554408620689159_n.PNG" alt="Image 47">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/18556788_10203072111119454_2477816869009043304_o.PNG" alt="Image 48">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/217673207_10208623336336615_8010161191657089835_n.PNG" alt="Image 49">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/239477398_3024608791196807_4614584711411923410_n.PNG" alt="Image 50">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/270937991_10209041252944269_1526855933767659110_n.PNG" alt="Image 51">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/289191921_10209450575857086_8883195260455352907_n.PNG" alt="Image 52">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/47680317_10205144907138059_2667081120658489344_n.PNG" alt="Image 53">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/62501371_10205748186779673_9168113189487902720_n.JPEG" alt="Image 54">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/82627660_2544495955874762_1702572684501581824_n.PNG" alt="Image 55">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/87173055_101423201463894_3853739507476070400_n.PNG" alt="Image 56">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/94016957_10206974181708780_9128407707190034432_n.JPEG" alt="Image 57">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/94129360_10206974183668829_4263770277059493888_n.JPEG" alt="Image 58">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/95258562_10207003820929742_3464875702526935040_n.JPEG" alt="Image 59">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/FCFA2E12-1849-4AA2-8947-AF7C10873520.MP4" alt="Video 1">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/caption.PNG" alt="Image 60">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image.PNG" alt="Image 61">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image (1).PNG" alt="Image 62">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image (2).PNG" alt="Image 63">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image (3).PNG" alt="Image 64">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image (4).PNG" alt="Image 65">
+  <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/image (5).PNG" alt="Image 66">
+
+  <!-- v3 -->
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0662.PNG" alt="Image 67">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0697.PNG" alt="Image 68">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0739.PNG" alt="Image 69">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0797.PNG" alt="Image 70">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0800.PNG" alt="Image 71">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0801.PNG" alt="Image 72">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0826.PNG" alt="Image 73">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0841.PNG" alt="Image 74">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0883.PNG" alt="Image 75">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0912.PNG" alt="Image 76">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0917.PNG" alt="Image 77">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0957.PNG" alt="Image 78">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0958.PNG" alt="Image 79">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0959.PNG" alt="Image 80">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0960.PNG" alt="Image 81">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0965.PNG" alt="Image 82">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0967.PNG" alt="Image 83">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0969.PNG" alt="Image 84">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0971.PNG" alt="Image 85">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0972.PNG" alt="Image 86">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0973.PNG" alt="Image 87">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0974.PNG" alt="Image 88">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0975.PNG" alt="Image 89">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0977.PNG" alt="Image 90">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0978.PNG" alt="Image 91">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0981.PNG" alt="Image 92">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0983.PNG" alt="Image 93">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0984.PNG" alt="Image 94">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_0985.PNG" alt="Image 95">
+<img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/IMG_1003.PNG" alt="Image 96">
+<video src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/3/ssstik.io_1688324481810.MP4" controls=""></video>
+
+</div>
+
+
+
+
+<script src="chrome-extension://mnbndgmknlpdjdnjfmfcdjoegcckoikn/js/js.js"></script></body>
