--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <head>
+  <style>
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.gallery img,
+.gallery video {
+  width: 100%;
+  height: auto;
+  /* max-width: calc(100% -20px); */
+  display: block;
+  border: 1px solid black;
+}
+body {
+  background-image: url('https://web.archive.org/web/20240507190940im_/https://z.radium.lol/perdika.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 </head>
 <body>
 <h1>The Z gallery</h1>
