--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <head>
+  <title>Website Name</title>
+  <meta content="Exclusive Image Library // Elizabeta.Pics" property="og:title" />
+  <meta content="Open this link to observe the Elizabeta Pics 😏😏😏👀👀👀🔥🔥🔥😁😁😁👅👅👅" property="og:description" />
+  <meta content="https://elizabeta.pics/" property="og:url" />
+  <meta content="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/2/62501371_10205748186779673_9168113189487902720_n.JPEG" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
   <title>Image Library // Elizabeta.pics</title>
   <style>
 .gallery {
