--- a/hitnut.html
+++ b/hitnut.html
@@ -174,7 +174,7 @@
         <a href="#">Forums</a>
         <a href="#">Members</a>
         <a href="#">Search</a>
-        <a href="#" class="merch-glow">MERCH</a>
+        <a href="#" class="merch-glow">BUY</a>
         <div style="margin-left: auto;">
             <a href="#">Register</a>
             <a href="#">Login</a>
