--- a/hitnut.html
+++ b/hitnut.html
@@ -186,7 +186,7 @@
         You are not logged in.
     </div>
 
-    <div class="coming-soon">Coming Soon™</div>
+    <div class="coming-soon">Coming Soon</div>
     <div class="copyright">COPYRIGHT  █▬█ █ ▀█▀ █▀█ █▄█ ▀█▀ ▄ ▄█ █ █▄ █▄ 2025</div>
 </body>
 </html>
