--- a/spange.html
+++ b/spange.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             min-height: 100vh;
-            background-image: url('https://media.discordapp.net/attachments/1316522514330947716/1344792702109356112/DUt0WK0Zdl.jpg?ex=67c2334d&is=67c0e1cd&hm=c3e6891be341bd4b44edaf51b216e1a28ad35583b87ffeae2e72446fdd70ae8b&=&format=webp&width=867&height=650');
+            background-image: url('/GAY-POOL-PARTY.PNG');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
