--- a/spange.html
+++ b/spange.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             min-height: 100vh;
-            background-image: url('/GAY-POOL-PARTY.PNG');
+            background-image: url('/GAY-POOL-PARTY.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
