--- a/spange.html
+++ b/spange.html
@@ -103,7 +103,9 @@
         const quotes = [
             "Sponsored by https://elizabeta.pics/",
             "+1 nut busted to elizabeta",
-            "Your christianism is too aggressive"
+            "Your christianism is too aggressive",
+            "Wait til ihacker ddos your site",
+            "PERDIKA IS MY SONNY BOYE"
         ];
 
         let currentQuote = 0;
@@ -148,7 +150,7 @@
         // Preload the image
         function preloadSparkleImage() {
             sparkleImage = new Image();
-            sparkleImage.src = 'https://media.discordapp.net/attachments/1280290042375307409/1299069514167619665/5888776217723781953-removebg-preview.png?ex=67c1f943&is=67c0a7c3&hm=603462f117eb47fb9172c14298d98f147acb61b08d2bd9964f71746d4a190c84&=&format=webp&quality=lossless';
+            sparkleImage.src = '/gay-child.png';
             sparkleImage.onload = () => {
                 // Initialize sparkle pool
                 for (let i = 0; i < maxSparkles; i++) {
