--- a/hitnut.html
+++ b/hitnut.html
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             padding: 140px 0 0;
-            background-color: black;
+            background-color: #2e2e2e;
             min-height: 100vh;
             position: relative;
             font-family: Arial, sans-serif;
