--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <script>alert("BREAKING NEWS! WATCH NAUM/PERDIKA RAGE AT A JEW ON elizabeta.pics/naumrage.html");</script>
   <title>Website Name</title>
   <meta content="Exclusive Image Library" property="og:title" />
   <meta content="Open this link to observe the Elizabeta Pics 😏😏😏👀👀👀🔥🔥🔥😁😁😁👅👅👅" property="og:description" />
@@ -33,6 +34,7 @@ body {
 <h1>The Z gallery</h1>
 <h2>Here you can observe the pictures</h2>
 <h2><a href="/gc.html">Press me to observe the group chat</a></h2>
+<h2><a href="/naumrage.html">BREAKING NEWS! Watch miko gc rage at a jew</a></h2>
 <div class="gallery">
   <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/241097596_10208746937826575_6346091029774779297_n.PNG" alt="Image 1">
   <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0993.JPEG" alt="Image 2">
