--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ body {
 <h2>Here you can observe the pictures</h2>
 <h2><a href="/gc.html">Press me to observe the group chat</a></h2>
 <h2><a href="/naumrage.html">BREAKING NEWS! Watch miko gc rage at a jew</a></h2>
+<h2><a href="https://gofile.io/d/Lmh1AT">In this gc above he also had an autism attack heres the audio https://gofile.io/d/Lmh1AT</a></h2>
 <div class="gallery">
   <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/241097596_10208746937826575_6346091029774779297_n.PNG" alt="Image 1">
   <img src="https://web.archive.org/web/20240507190940im_/https://z.radium.lol/IMG_0993.JPEG" alt="Image 2">
