--- a/index.html
+++ b/index.html
@@ -609,19 +609,19 @@
                 <div class="game-image">
                     <div class="screenshot-placeholder">
                         GTA-Style Gameplay Screenshot 1
-                        <br><small style="opacity: 0.7;">Miko in Downtown Memmingen</small>
+                        <br><img src="https://media.discordapp.net/attachments/1379237276537589963/1389739529551745176/78F7DB5A-A6FA-412E-8D5A-DAFF2B6A125A.png?ex=6865b74b&is=686465cb&hm=4e50779d10e7d7a3e8d24ebe6b65057e37d4a91f79dce19d5024c2d35f9a29c0&=&format=webp&quality=lossless&width=903&height=602">
                     </div>
                 </div>
                 <div class="game-image">
                     <div class="screenshot-placeholder">
                         Family Interaction Screenshot 2
-                        <br><small style="opacity: 0.7;">Zdravkovski Family Dynamics</small>
+                        <br><img src="https://media.discordapp.net/attachments/1379237276537589963/1389738872132472882/ChatGPT_Image_19_jun_2025_03_28_17_p.m..png?ex=6865b6af&is=6864652f&hm=0796d1f7a9fac0eabef6fd2f4a84ec7071d70920a4264a4f80ce97c017e82d33&=&format=webp&quality=lossless&width=903&height=602">
                     </div>
                 </div>
                 <div class="game-image">
                     <div class="screenshot-placeholder">
                         Open World Environment 3
-                        <br><small style="opacity: 0.7;">Memmingen City Streets</small>
+                        <br><img src="https://media.discordapp.net/attachments/1379237276537589963/1389739073358270627/ChatGPT_Image_19_jun_2025_03_07_18_p.m..png?ex=6865b6df&is=6864655f&hm=db4dee747a147b3d8c17246c07d024ff849c5574e6b9e809b499525e18f25f2e&=&format=webp&quality=lossless&width=706&height=706">
                     </div>
                 </div>
             </div>
